# vault-sync-mcp

./: .gitignore  .mcp.json  README.md  config.yaml  manifest.json  pyproject.toml  requirements.txt  server.json  server.py  vault-sync-mcp.mcpb
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  personal-pii-scrub.yml  security-audit.yml  test.yml
hooks/: install-ping.py
tests/: test_smoke_import.py
