[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-sync-mcp"
version = "0.1.0"
description = "FastMCP server for syncing a markdown/Obsidian vault."
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.2",
    "python-frontmatter>=1.3.0",
    "pyyaml>=6.0.3",
    "xxhash>=3.7.0",
]

# Flat layout (modules at repo root). List them explicitly so the editable
# build is deterministic and setuptools does not fail discovery with
# "Multiple top-level modules discovered in a flat-layout".
[tool.setuptools]
py-modules = ["server"]
